--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "availity-reactstrap-validation": "^1.4.3",
     "axios": "^0.18.0",
+    "bcrypt": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.0.0",
     "dotenv": "^5.0.0",
     "history": "^4.7.2",
+    "password-hash": "^1.2.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
