--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "bootstrap": "^4.0.0",
     "dotenv": "^5.0.0",
     "history": "^4.7.2",
+    "md5": "^2.2.1",
     "password-hash": "^1.2.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-loading-bar": "^0.0.7",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "reactstrap": "^5.0.0-beta",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0",
