--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.0.0",
     "dotenv": "^5.0.0",
+    "es6-promise": "^4.2.4",
     "history": "^4.7.2",
     "md5": "^2.2.1",
     "password-hash": "^1.2.2",
