--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "availity-reactstrap-validation": "^1.4.3",
     "axios": "^0.18.0",
+    "base64-img": "^1.0.4",
     "bcrypt": "^1.0.3",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.0.0",
     "dotenv": "^5.0.0",
     "es6-promise": "^4.2.4",
     "history": "^4.7.2",
+    "image-to-base64": "^1.3.0",
     "md5": "^2.2.1",
     "password-hash": "^1.2.2",
     "prop-types": "^15.6.0",
